--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -1,14 +1,13 @@
 server {
   listen 80;
-  server_name  ubuntu.chinureeves.com;
+  server_name  chinureeves.com ubuntu.chinureeves.com;
 
-   location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+
+    location /.well-known/acme-challenge/ {
+        root /usr/share/nginx/html/certbot;
     }
-    
-    location = /test {
-        root /usr/share/nginx/html;
-        try_files /page2.html =404;
+
+    location / {
+        return 301 https://$host$request_uri;
     }
 }
