--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -1,5 +1,6 @@
 server {
   listen 80;
+  listen  [::]:80;
   server_name  chinureeves.com ubuntu.chinureeves.com;
 
 
@@ -7,7 +8,9 @@ server {
         root /usr/share/nginx/html/certbot;
     }
 
+
     location / {
-        return 301 https://$host$request_uri;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
     }
 }
