--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -13,4 +13,9 @@ server {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
     }
+
+    location = /test3 {
+        root /usr/share/nginx/html;
+        try_files /page2.html =404;
+    }
 }
