--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -3,6 +3,8 @@ server {
   listen  [::]:80;
   server_name  chinureeves.com ubuntu.chinureeves.com;
 
+    ssl_certificate /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/privkey.pem;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html/certbot;
