--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen  [::]:80;
-  server_name  chinureeves.com ubuntu.chinureeves.com;
+  server_name  ubuntu.chinureeves.com;
 
     ssl_certificate /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/privkey.pem;
@@ -10,6 +10,24 @@ server {
         root /usr/share/nginx/html/certbot;
     }
 
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+
+server {
+    listen 443 ssl;
+
+    server_name  ubuntu.chinureeves.com;
+
+
+    ssl on;
+    ssl_certificate /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/privkey.pem;
+    ssl_ciphers                     EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    ssl_prefer_server_ciphers       on;
+    ssl_protocols   TLSv1 TLSv1.1 TLSv1.2;
 
     location / {
         root   /usr/share/nginx/html;
@@ -21,3 +39,7 @@ server {
         try_files /page2.html =404;
     }
 }
+
+
+
+
