--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -9,13 +9,7 @@ server {
 
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    location = /test3 {
-        root /usr/share/nginx/html;
-        try_files /page2.html =404;
+        return 301 https://$host$request_uri;
     }
 }
 
