--- a/conf/conf.d/chinureeves.conf
+++ b/conf/conf.d/chinureeves.conf
@@ -9,13 +9,7 @@ server {
 
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    location = /test3 {
-        root /usr/share/nginx/html;
-        try_files /page2.html =404;
+        return 301 https://$host$request_uri;
     }
 }
 
@@ -30,7 +24,7 @@ server {
     ssl_ciphers                     EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
     ssl_prefer_server_ciphers       on;
     ssl_protocols   TLSv1 TLSv1.1 TLSv1.2;
-
+    
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
@@ -41,7 +35,3 @@ server {
         try_files /page2.html =404;
     }
 }
-
-
-
-
