--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen  [::]:80;
-  server_name  ubuntu.chinureeves.com;
+  server_name  *.chinureeves.com;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html/certbot;
@@ -17,7 +17,7 @@ server {
 server {
     listen 443 ssl;
 
-    server_name  ubuntu.chinureeves.com;
+    server_name  *.chinureeves.com;
 
     ssl_certificate /etc/nginx/certs/letsencrypt/live/chinureeves.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/letsencrypt/live/chinureeves.com/privkey.pem;
