--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   listen  [::]:80;
-  server_name  *.chinureeves.com;
+  server_name  ubuntu.chinureeves.com;
 
     location /.well-known/acme-challenge/ {
         root /usr/share/nginx/html/certbot;
@@ -17,16 +17,14 @@ server {
 server {
     listen 443 ssl;
 
-    server_name  *.chinureeves.com;
+    server_name  ubuntu.chinureeves.com;
 
     ssl_certificate /etc/nginx/certs/letsencrypt/live/chinureeves.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/letsencrypt/live/chinureeves.com/privkey.pem;
    
     ssl_protocols TLSv1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-CHACHA20-POLY1305";
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
+
     
     location / {
         root   /usr/share/nginx/html;
