--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -19,8 +19,8 @@ server {
 
     server_name  ubuntu.chinureeves.com;
 
-    ssl_certificate /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/certs/letsencrypt/live/ubuntu.chinureeves.com/privkey.pem;
+    ssl_certificate /etc/nginx/certs/letsencrypt/live/chinureeves.com/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/letsencrypt/live/chinureeves.com/privkey.pem;
     ssl_protocols TLSv1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
