--- a/conf/conf.d/hw2.conf
+++ b/conf/conf.d/hw2.conf
@@ -1,13 +1,16 @@
-server {
-  listen 80;
-  listen  [::]:80;
-  server_name  hw2.chinureeves.com;
+upstream hw2master {
+    server 35.234.53.158:80;
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
 }
 
+server {
+  listen 80;
+  server_name hw2.chinureeves.com;
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+}
 
 server {
     listen 443 ssl;
@@ -16,20 +19,30 @@ server {
 
     ssl_certificate /etc/nginx/certs/letsencrypt/live/chinureeves.com/fullchain.pem;
     ssl_certificate_key /etc/nginx/certs/letsencrypt/live/chinureeves.com/privkey.pem;
+   
     ssl_protocols TLSv1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-CHACHA20-POLY1305";
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
-    
+
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+    add_header X-Frame-Option $http_origin;
+    add_header X-Real-Server $upstream_addr always;
+    add_header X-Real-Cache $upstream_cache_status always;
+
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        proxy_pass http://hw2master;
+        proxy_http_version 1.1;
+        default_type "application/json";
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-ClientIP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
     }
 
-    location = /test3 {
-        root /usr/share/nginx/html;
-        try_files /page2.html =404;
-    }
+
 }
-
